<resources>
    <string name="app_name">Agronify</string>

    <string name="greeting">Halo, %s!</string>
    <string name="greeting_desc">Mau melakukan apa hari ini?</string>

    <string name="title_home">Home</string>
    <string name="title_profile">Profile</string>
    <string name="title_agro_edu">AgroEdu</string>
    <string name="title_agro_scan">AgroScan</string>
    <string name="title_agro_hub">AgroHub</string>
    <string name="title_agro_mart">AgroMart</string>
    <string name="title_agro_work">AgroWork</string>
    <string name="title_agro_plan">AgroPlan</string>
    <string name="title_agro_fin">AgroFin</string>
    <string name="title_more">Lainnya</string>
    <string name="title_agro_spotlight">AgroSpotlight</string>
    <string name="title_agro_tips">AgroTips</string>

    <string name="onboard_skip">Lewati</string>
    <string name="onboard_next_button">Selanjutnya</string>
    <string name="onboard_first_title">Jadi Petani Lebih Cerdas!</string>
    <string name="onboard_first_desc">Temukan perkiraan cuaca, informasi tanaman, dan identifikasi penyakit untuk meningkatkan kinerja pertanianmu.</string>
    <string name="onboard_second_title">Kolaborasi Seru!</string>
    <string name="onboard_second_desc">Bergabung dengan petani lainnya, tanyakan pertanyaan, dan bagikan pengetahuanmu. Jalin jaringan yang mendukung dan tumbuh bersama dalam dunia pertanian!</string>
    <string name="onboard_third_title">Tingkatkan Agribisnismu!</string>
    <string name="onboard_third_desc">Biar agribisnismu lancar jaya, Agronify punya alat canggih! Mulai dari perencanaan keuangan hingga dapetin penawaran terbaik di pasar, semuanya ada di sini.</string>
    <string name="onboard_welcome_desc">Udah punya akun atau mau daftar? Gabung dengan Agronify dan nikmati fitur lengkapnya.</string>
    <string name="onboard_welcome_title">Selamat Datang di \nAgronify!</string>
    <string name="onboard_register_button">Belum ada akun? Daftar dulu</string>

    <string name="form_email">Email</string>
    <string name="form_password">Kata Sandi</string>
    <string name="form_name">Nama Lengkap</string>
    <string name="form_confirm_password">Konfirmasi Kata Sandi</string>
    <string name="form_search">Cari</string>
    <string name="login_button">Masuk</string>
    <string name="register_button">Daftar</string>

    <string name="login_title">Selamat Datang!</string>
    <string name="login_desc">Udah punya akun? masuk sekarang dan kembali bergabung di Agronify!</string>
    <string name="login_forgot_password">Lupa kata sandi?</string>
    <string name="login_register_text">Belum punya akun?</string>

    <string name="register_desc">Jadilah bagian dari Agronify dengan mendaftar akun baru.</string>
    <string name="register_login_text">Sudah punya akun?</string>

    <string name="weather_tap_detail">Ketuk untuk detail</string>
    <string name="weather_temp">%d\°</string>
    <string name="weather_clear">Cerah</string>
    <string name="weather_partly_cloudy">Sebagian Berawan</string>
    <string name="weather_overcast">Berawan Tebal</string>
    <string name="weather_drizzle">Gerimis</string>
    <string name="weather_rain">Hujan</string>
    <string name="weather_thunderstorm">Hujan Petir</string>
    <string name="weather_cloudy">Berawan</string>

    <string name="unit_degree">°</string>
    <string name="unit_percent">%</string>
    <string name="unit_speed">km/jam</string>

    <string name="weather_today_title">Hari Ini</string>
    <string name="weather_tomorrow_title">Besok</string>
    <string name="weather_after_title">Lusa</string>
    <string name="weather_min_title">Minimum</string>
    <string name="weather_max_title">Maksimum</string>
    <string name="weather_precipitation_title">Presipitasi</string>
    <string name="weather_wind_title">Angin</string>

    <string name="edu_desc_title">Deskripsi</string>

    <string name="profile_change_password_title">Ubah Kata Sandi</string>
    <string name="profile_help_title">Pusat Bantuan</string>
    <string name="profile_term_condition_title">Syarat dan Ketentuan</string>
    <string name="profile_about_title">Tentang Agronify</string>
    <string name="profile_rating_title">Beri Rating Aplikasi</string>
    <string name="profile_logout_title">Keluar</string>
    <string name="profile_no_account">Anda Belum Masuk</string>

    <string name="scan_ripeness_title">Kematangan Buah</string>
    <string name="scan_title">Mau deteksi apa?</string>
    <string name="scan_disease_title">Penyakit Tanaman</string>

    <string name="ripe_type_title">Deteksi Kematangan Buah</string>
    <string name="ripe_type_desc">Pilih buah untuk deteksi kematangan</string>
    <string name="ripe_fruit_title">Jenis Buah</string>

    <string name="disease_type_title">Deteksi Penyakit Tanaman</string>
    <string name="disease_type_desc">Pilih jenis tanaman untuk deteksi penyakit</string>
    <string name="disease_garden_title">Perkebunan</string>
    <string name="disease_field_title">Pertanian</string>

    <string name="add_detect_title">Deteksi %s</string>
    <string name="add_camera_title">Ambil dari Kamera</string>
    <string name="add_gallery_title">Ambil dari Galeri</string>
    <string name="add_success_title">Berhasil</string>
    <string name="add_success_ripeness">AgroScan berhasil mendeteksi tingkat kematangan buah Anda</string>
    <string name="add_success_disease">AgroScan berhasil mendeteksi adanya penyakit pada tanaman Anda</string>
    <string name="add_disease_success_healthy">AgroScan tidak mendeteksi adanya penyakit pada tanaman Anda</string>
    <string name="add_accuracy">%.2f%% Akurasi</string>
    <string name="add_failure_title">Gagal</string>
    <string name="add_failure">AgroScan tidak dapat mendeteksi gambar Anda</string>
    <string name="add_failure_retake">Ambil Ulang Gambar</string>
    <string name="add_back">Kembali</string>
    <string name="add_detail">Lihat Detail</string>

    <string name="result_title">Hasil Deteksi</string>

    <string name="error_empty_email">Email tidak boleh kosong</string>
    <string name="error_invalid_email">Email tidak valid</string>
    <string name="error_empty_password">Kata sandi tidak boleh kosong</string>
    <string name="error_password">Kata sandi minimal 5 karakter</string>
    <string name="error_form">Lengkapi terlebih dahulu</string>
    <string name="error_empty_name">Nama tidak boleh kosong</string>
    <string name="error_confirm_password">Kata sandi tidak sama</string>

    <string name="dialog_login_title">Fitur Terbatas!</string>
    <string name="dialog_login_desc">Masuk untuk mengakses fitur ini</string>
    <string name="dialog_logout_title">Anda yakin ingin keluar?</string>
    <string name="dialog_logout_desc">Beberapa akses fitur akan hilang</string>
    <string name="dialog_soon_title">Segera Hadir!</string>
    <string name="dialog_soon_desc">Fitur ini akan segera hadir</string>

    <string name="permission_grant">Izinkan</string>
    <string name="permission_location">AgroWeather membutuhkan lokasi Anda</string>
    <string name="permission_camera">AgroScan membutuhkan kamera Anda</string>
    <string name="permission_gallery">AgroScan membutuhkan galeri Anda</string>
</resources>