<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/agronify_white"
    tools:context=".view.activity.main.LoginActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/top_app_bar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/agronify_white"
            app:title="Masuk"
            app:titleTextAppearance="@style/TextAppearance.App.TitleLarge"
            app:titleTextColor="@color/agronify_black"
            app:navigationIcon="@drawable/ic_back"
            app:navigationIconTint="@color/agronify_black" />

    </com.google.android.material.appbar.AppBarLayout>

    <TextView
        android:id="@+id/tv_login_welcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="20dp"
        android:fontFamily="@font/nunito_sans_bold"
        android:text="@string/login_title"
        android:textColor="@color/agronify_black"
        android:textSize="24sp"
        app:layout_constraintTop_toBottomOf="@id/app_bar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tv_login_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="20dp"
        android:fontFamily="@font/nunito_sans"
        android:text="@string/login_desc"
        android:textColor="#80000000"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@id/tv_login_welcome"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_login_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="20dp"
        android:hint="@string/form_email"
        app:hintTextAppearance="@style/TextAppearance.App.FormHint"
        app:errorTextAppearance="@style/TextAppearance.App.FormHint"
        style="?attr/textInputOutlinedStyle"
        app:endIconMode="clear_text"
        app:layout_constraintTop_toBottomOf="@id/tv_login_desc"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ed_login_email"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:textColor="@color/agronify_black"
            android:textAppearance="@style/TextAppearance.App.FormInput"
            android:inputType="textEmailAddress" />
        
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_login_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="20dp"
        android:hint="@string/form_password"
        app:hintTextAppearance="@style/TextAppearance.App.FormHint"
        app:errorTextAppearance="@style/TextAppearance.App.FormHint"
        style="?attr/textInputOutlinedStyle"
        app:endIconMode="password_toggle"
        app:layout_constraintTop_toBottomOf="@id/til_login_email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ed_login_password"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:textColor="@color/agronify_black"
            android:textAppearance="@style/TextAppearance.App.FormInput"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tv_login_forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp"
        android:paddingVertical="8dp"
        android:fontFamily="@font/nunito_sans"
        android:text="@string/login_forgot_password"
        android:textSize="14sp"
        android:textColor="@color/agronify_black"
        android:gravity="center_horizontal"
        app:layout_constraintTop_toBottomOf="@id/til_login_password"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/nunito_sans_bold"
        android:text="@string/login_button"
        android:textColor="@color/agronify_white"
        android:textSize="16sp"
        style="?attr/materialButtonStyle"
        app:layout_constraintTop_toBottomOf="@id/tv_login_forgot_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tv_register_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="48dp"
        android:fontFamily="@font/nunito_sans"
        android:paddingVertical="8dp"
        android:text="@string/login_register_text"
        android:textColor="@color/agronify_black"
        android:textSize="14sp"
        android:gravity="end"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_login" />

    <TextView
        android:id="@+id/tv_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingVertical="8dp"
        android:paddingHorizontal="4dp"
        android:fontFamily="@font/nunito_sans_semi_bold"
        android:text="@string/register_button"
        android:textColor="@color/agronify_main"
        android:textSize="14sp"
        app:layout_constraintTop_toTopOf="@id/tv_register_desc"
        app:layout_constraintBottom_toBottomOf="@id/tv_register_desc"
        app:layout_constraintStart_toEndOf="@id/tv_register_desc" />

    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/cpi_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:visibility="gone"
        app:indicatorColor="@color/agronify_main"
        app:indicatorSize="48dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>