<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        style="?attr/materialCardViewFilledStyle"
        app:cardBackgroundColor="@color/agronify_white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="20dp">

            <ImageView
                android:id="@+id/iv_dialog"
                android:layout_width="144dp"
                android:layout_height="144dp"
                android:src="@drawable/logo"
                android:foregroundGravity="center"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginHorizontal="20dp"
                android:fontFamily="@font/nunito_sans_bold"
                android:text="@string/dialog_logout_title"
                android:textColor="@color/agronify_black"
                android:textSize="20sp"
                android:gravity="center"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/iv_dialog" />

            <TextView
                android:id="@+id/tv_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginHorizontal="20dp"
                android:fontFamily="@font/nunito_sans"
                android:text="@string/dialog_logout_desc"
                android:textColor="@color/agronify_black"
                android:textSize="14sp"
                android:gravity="center"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_title" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_dialog_logout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginHorizontal="20dp"
                android:fontFamily="@font/nunito_sans_bold"
                android:text="@string/profile_logout_title"
                android:textColor="@color/agronify_white"
                android:textSize="16sp"
                style="?attr/materialButtonStyle"
                app:backgroundTint="@color/agronify_error"
                app:elevation="4dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_desc" />

            <TextView
                android:id="@+id/tv_dialog_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:paddingVertical="8dp"
                android:paddingHorizontal="20dp"
                android:fontFamily="@font/nunito_sans_bold"
                android:text="@string/add_back"
                android:textColor="@color/agronify_black"
                android:textSize="14sp"
                android:textAlignment="center"
                app:layout_constraintTop_toBottomOf="@id/btn_dialog_logout"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>